k8s/ui/run-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yaml
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: run
  name: ui
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: run
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yaml
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/llm-tools: "true"
        io.kompose.service: run
    spec:
      containers:
        - image: registry.gitlab.com/shri_javadekar/scratch/llmhackathon-ui:latest
          name: ui
          resources:
            requests:
              cpu: 100m
              memory: 40M
          ports:
            - containerPort: 3000
          resources: {}
      restartPolicy: Always
status: {}
